<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id">Id</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="information">Please login to book a cab</string>
    <string name="title_activity_request_taxi">Request_taxi</string>
    <string name="Others">Others</string>
    <string name="Favorite">Favorite</string>
    <string name="Location_to">Location_to</string>
    <string name="Location_from">Location_from</string>
    <string name="Location_purpose">Location_purpose</string>
    <string name="Location_vehicle_type">Location_vehicle_type</string>
    <string name="Location_time">Location_time</string>
    <string name="Location_date">Location_date</string>
    <string name="Location_duration">Location_duration</string>
    <string name="Reports">Reports</string>
    <string name="Bookcab">Book a Cab</string>
    <string name="per_emp">Per employee per month</string>
    <string name="per_time">Time wise per month</string>
    <string name="linerlayout">linerlayout</string>
    <string name="Send_fav">Send_fav</string>
    <string name="title_activity_manager">Manager</string>
    <string name="title_activity_analytics">Analytics</string>
    <string name="title_activity_information">Information</string>

</resources>
